[gd_scene load_steps=3 format=3 uid="uid://wbqpijken8mv"]

[ext_resource type="Script" path="res://ui/interface.gd" id="1_0nwdk"]
[ext_resource type="Texture2D" uid="uid://ctcwcoryfbs81" path="res://icons/add-icon.png" id="1_286fn"]

[node name="interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0nwdk")

[node name="margain" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="interface_elements" type="VBoxContainer" parent="margain"]
layout_mode = 2

[node name="new_board" type="HBoxContainer" parent="margain/interface_elements"]
layout_mode = 2

[node name="board_name" type="LineEdit" parent="margain/interface_elements/new_board"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Board Name"

[node name="create_board" type="Button" parent="margain/interface_elements/new_board"]
layout_mode = 2
icon = ExtResource("1_286fn")

[node name="tabs" type="TabContainer" parent="margain/interface_elements"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.203922, 0.203922, 0.203922, 1)

[connection signal="text_submitted" from="margain/interface_elements/new_board/board_name" to="." method="_on_board_name_text_submitted"]
[connection signal="pressed" from="margain/interface_elements/new_board/create_board" to="." method="_on_create_board_pressed"]
